--- a/style2.css
+++ b/style2.css
@@ -1,11 +1,11 @@
-/* Ars Interretialis, Art of the Internet, a Byzantine-era medieval theme*/
+/* Theme: Red*/
 @font-face { /*Establishes Custom Font*/
     font-family: Pfeffer;  /*Specifies font name */
     src: url(fonts2/PfefferMediaeval.otf) format("opentype"); /*Source path for font */
 }
 @font-face { /*Establishes Custom Font*/
     font-family: Vespasian;  /*Specifies font name */
-    src: url(fonts2/Vespasian2018-Regular.otf) format("opentype"); /*Source path for font */
+    src: url(fonts2/OldeEnglish.ttf) format("truetype"); /*Source path for font */
 }
 @font-face { /*Establishes Custom Font*/
     font-family: Junicode;  /*Specifies font name */
@@ -18,12 +18,15 @@
                          "preamble preamble summary" /*2 columns of preamble,1 of summary*/
                          "preamble preamble summary"; /*2 columns of preamble, 1 of summary*/
     grid-template-columns: 1fr 1fr 1fr; /*columns are equal proportions*/
-    grid-template-rows: 1fr 1fr 1fr; /*rows are equal proportions*/
+    grid-template-rows: auto 1fr auto; /*rows are equal proportions*/
     grid-area: intro; /*specifies grid area*/
-    gap: 0px 0px; /*gutters are 0 pixels*/
+    gap: 0px 0px; /*No gutters*/
 }
-.header { /*Affects the two titles*/
+header { /*Affects the two titles*/
     grid-area: header; /*Sets sub grid as header*/
+    background-color: #3b382a;
+    background: radial-gradient(circle,rgba(199, 182, 119, 1) 0%, rgba(130, 21, 14, 1) 1%, rgba(122, 1, 1, 1) 11%, rgba(26, 12, 12, 1) 86%);
+    border-radius: 70px 70px 0px 0px;
 }
 .preamble { /*Affects content of preamble*/
     grid-area: preamble; /*Sets sub grid*/
@@ -39,7 +42,7 @@
     grid-template-columns: 1fr 1fr 1fr; /*columns are equal proportions*/
     grid-template-rows: 1.4fr 1.2fr 0.4fr; /*the first row is largest, 2nd, then third*/
     grid-area: main-supporting; /*specifies grid area name*/
-    gap: 8px 8px; /*no gutters*/ 
+    gap: 0px 0px; /*No gutters*/ 
 }
 .requirements { /*Affects their contents*/
     grid-area: requirements; /*Name of grid area*/
@@ -53,7 +56,7 @@
 .benefits { /*Affects their contents*/
     grid-area: benefits; /*Name of grid area*/
 }
-.footer { /*Affects their contents*/
+footer { /*Affects their contents*/
     grid-area: footer; /*Name of grid area*/
 }
 .sidebar { /*Affects their contents*/
@@ -65,6 +68,8 @@
     grid-template-rows: 1fr 1fr 1fr; /*proportionate rows*/
     gap: 0px 0px; /*No gutters*/
     grid-area: sidebar; /*Name of grid area*/
+    background: url(assets2/sidebar.jpg);
+    border: 10px solid rgba(0, 0, 0, 0.5);
 }
 .wrapper { /*Affects their contents*/
     display: grid; /*Enables grid layout*/
@@ -94,27 +99,61 @@
 
 /*MISC*/
 body { /*Affects the body contents*/
-    background: linear-gradient(90deg,rgba(161, 2, 2, 1) 0%, rgba(122, 1, 1, 1) 50%, rgba(255, 0, 0, 1) 100%);
+    background-image: url(assets2/Little\ tapestry\ flowers.jpg);
+    color: #F6E3AD;
 }
 .page-wrapper { /*Affects the whole content area of the page*/
     display: grid; /*Enables grid layout*/
     grid-template-areas: "intro intro intro" /*3 columns of intro*/
                         "main-supporting main-supporting sidebar" /*2 main, 1 sidebar column*/
                         "main-supporting main-supporting sidebar"; /*2 main 1 sidebar column*/
-    grid-template-columns: 1fr 1fr 1fr; /*columns are equally proportionate*/                    
+    grid-template-columns: 1fr 1.3fr 0.7fr; /*columns are equally proportionate*/                    
     grid-template-rows: 1fr 1fr 1fr; /*rows are equally proportionate*/
-    background-image: url(assets2/); /*Background and path for image resembling an ornamental frame*/
-    gap: 0px 0px; /*column and row gutters are 0*/
+    background-image: url(assets2/download\ \(4\).jpg); /*Background and path for image resembling an ornamental frame*/
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: center;
+    margin-left: 20em;
+    width: 1200px;
+    height: 2100px;
+    border-radius: 70px 70px 0px 0px;
+    gap: 0px 0px; /*No gutters*/
 }
 
 p {
     font-family: Junicode, Arial, Helvetica, sans-serif;
 }
-h1 {
+header h1 {
+    text-align: center;
     font-family: Vespasian, Arial, Helvetica, sans-serif;
+    font-size: 9em;
+    font-weight: normal;
+    letter-spacing: 0.1em;
+}
+header h1::after {
+    content: "";
+    display: block;
+    height: 100px;
+    background: url(assets2/output-onlinetools.png) no-repeat center;
+}
+
+header h2 {
+    text-transform: uppercase;
+    color: #3b382a;
+    text-align: center;
+    margin-top: -3em;
+    height: 75px;
+    padding-top: 2.7em;
+    letter-spacing: -0.05em;
+    background-image: url(assets2/banner.png);
+    background-repeat: no-repeat;
+    background-position: center 107px;
+    background-size:770px auto; 
 }
 h2 {
-    font-family: Vespasian, Arial, Helvetica, sans-serif;
+    font-family: Junicode, Arial, Helvetica, sans-serif;
+    font-size: 3em;
+    font-weight: normal;
 }
 h3 {
     font-family: Pfeffer, Arial, Helvetica, sans-serif;
